edit jenkins file

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,9 @@
 pipeline{
+    agent any
+    parameters {
+        booleanParam(name: 'RUNTEST', defaultValue: true, description: 'Toggle this value for testing')
+        choice(name: CICD, choices: ['CI', 'CICD'], description: 'Pick something')
+    }
     stages{
         stage('Build Project'){
             step{
@@ -8,6 +13,11 @@ pipeline{
         stage('Run Testing'){
             step{
                 echo 'Testing....'
+            }
+        }
+        stage('Deploy'){
+            step{
+                echo 'DEploy....'
             }
         }
     }
