--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       POSTGRES_DB: cashier-restaurant
 
   nodejs:
-    image: "backend"
+    image: "fitrakz/backend"
     ports:
       - "3000:3000"
     depends_on:
@@ -56,7 +56,7 @@ services:
       PORT: 3000
 
   nodejs2:
-    image: "backend"
+    image: "fitrakz/backend"
     ports:
       - "3001:3000"
     depends_on:
@@ -77,7 +77,7 @@ services:
 
   my-app:
     container_name: my-app
-    image: "frontend"
+    image: "fitrakz/frontend"
     ports:
       - '80:80'
     links:
